// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase Citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1633247064582,
      "mascota": "Nuevo Nombre",
      "propietario": "Miguel",
      "sintomas": "Solo duerme",
      "telefono": "123213",
    },
  ],
}
`;

exports[`Probar la clase Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2021",
      "hora": "10:30",
      "id": 1633247064582,
      "mascota": "Hook",
      "propietario": "Miguel",
      "sintomas": "Solo duerme",
      "telefono": "123213",
    },
  ],
}
`;

exports[`Probar la clase Citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
